--- a/styles/main.less
+++ b/styles/main.less
@@ -1,5 +1,5 @@
 @import 'variables';
-@import 'http://lvh.me:3000/assets/developers/populr_mixins.less';
+@import 'http://populr.me/assets/developers/populr_mixins.less';
 @import 'lesshat';
 @import 'grid';
 
