--- a/styles/main.less
+++ b/styles/main.less
@@ -239,7 +239,7 @@ body {
   background: fade(@custom-color, 50%);
 }
 
-.has-social #meta, .has-links #meta {
+.has-sharing #meta, .has-links #meta {
   display: block;
 }
 
