--- a/styles/main.less
+++ b/styles/main.less
@@ -111,6 +111,11 @@ h2 {
 
 .asset-title {
   margin-bottom: @baseline / 2;
+  padding-top: @baseline;
+}
+
+.asset-type-text .asset-title {
+  padding-top: 0;
 }
 
 a {
@@ -227,6 +232,11 @@ body {
   text-align: center;
 }
 
+#pop-logo img {
+  max-width: 740px - unit(@gutter-width * 2, px);
+  height: auto;
+}
+
 #pop-logo img, #meta {
   margin: 0 auto;
   display: block;
@@ -244,7 +254,7 @@ body {
   & .addthis_button_facebook_like {width: 66px;}
   width: 60px;
   .border-radius(@border-radius 0 0 @border-radius);
-  background: fade(@custom-color, 50%);
+  background: @custom-color;
   .clearfix();
 }
 
@@ -268,10 +278,22 @@ body {
   margin: 0;
 }
 
-.has-sharing #pop-links {
-  margin: @baseline / 2 0 0 0;
-  padding-top: @baseline / 2;
+.sharing-border(@custom-color) when (luma(@custom-color) >= 50%) {
   border-top: 1px solid mix(@dark-gray, @custom-color);
+}
+
+.sharing-border(@custom-color) when (luma(@custom-color) < 50%) {
+  border-top: 1px solid mix(@light-gray, @custom-color);
+}
+
+.has-links #pop-sharing {
+  padding-bottom: 0;
+}
+
+.has-sharing #pop-links {
+  margin: @baseline 0 0 0;
+  padding-top: @baseline;
+  .sharing-border(@custom-color);
 }
 
 #pop-links li:before {display: none;}
@@ -301,12 +323,7 @@ body {
     z-index: 1;
     position: relative;
   }
-  h2 {
-    padding-top: @baseline;
-  }
 }
-
-
 
 .columnizer-row:first-child.columnizer-row-contents-imagegroup .columnizer-col {
   width: 740px;
@@ -503,16 +520,28 @@ body {
   }
 }
 
+// .asset-type-embedgroup .description {
+//   padding-top: @baseline / 2;
+// }
+
 #populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);
 
 
 @media screen and (max-width: 905px) {
+  .has-sharing #pop-links {
+    margin-top: @baseline / 2;
+  }
+
   #meta {
     position: relative;
-    width: 720px;
+    width: auto;
+    padding: unit(@gutter-width, px);
+    .box-sizing(border-box);
     & .addthis_button_facebook_like {width: auto;}
-    margin-bottom: @baseline;
-    top: auto;
+    margin-top: @baseline;
+    top: auto !important;
+    background: fade(@custom-color, 100%);
+    .border-radius(@border-radius);
   }
   #pop-sharing > a {
     display: inline-block;
@@ -529,45 +558,76 @@ body {
   
   #populr > .mobile-reset();
   
-  #main-region, #meta {
-    width: 97% !important;
-    padding: unit(@gutter-width, px);
+  #pop-logo {
     .box-sizing(border-box);
-    margin: 0 auto;
+    margin: 0 8px;
   }
 
-  #meta {margin-bottom: @baseline;}
+  #pop-logo img {
+    max-width: 100%;
+    .box-sizing(border-box);
+  }
+
+  #main-region, #meta {
+    width: auto;
+    padding: unit(@gutter-width, px);
+    .box-sizing(border-box);
+    margin: 0 8px;
+  }
+
+  .has-logo #main-region {
+    margin-top: @baseline * 3;
+  }
+
+  .has-logo.has-title #main-region {
+    margin-top: 0;
+  }
+
+  #meta {margin-top: @baseline;}
 
   .columnizer-row {
     width: auto !important;
-    margin: @baseline * 2 0 0 0 !important;
+    margin: 0 0 0 0 !important;
   }
 
   .columnizer-col {
     display: block !important;
-    margin: 0 0 0 0 !important;
+    margin: 0 0 @baseline * 3 0 !important;
   }
 
   .columnizer-row-contents-text {
-    margin: @baseline * 2 0 0 0;
+    margin: 0 0 @baseline * 3 0 !important;
     padding-left: 10px;
     padding-right: 10px;
     .box-shadow(~'none !important');
+    .columnizer-col {
+      margin-bottom: 0 !important;
+    }
+    .border-radius(@border-radius);
   }
 
   .columnizer-row:first-child.columnizer-row-contents-imagegroup {
     width: 100% !important;
     margin: auto !important;
-    .asset:after {
-      width: 100% !important;
-      margin: 0 !important;
-      .box-shadow(~'none !important');
-    }
-    .img {
-      .border-radius(@border-radius);
-    }
-    .bg {
-      .border-radius(@border-radius);
+    .columnizer-col {
+      .asset:after {
+        display: none !important;
+        // width: 100% !important;
+        // margin: 0 !important;
+        // .box-shadow(~'none !important');
+      }
+      .img {
+        .border-radius(@border-radius);
+      }
+      .bg {
+        .border-radius(@border-radius);
+      }
+      .text {
+        position: relative !important;
+        .border-radius(0 0 @border-radius @border-radius) !important;
+        background: fade(@custom-color, 100%) !important;
+        bottom: auto;
+      }
     }
   }
 
