don't hard-code http:

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,11 +1,11 @@
 @import 'variables';
-@import 'http://populr.me/assets/developers/populr_mixins.less';
+@import '//populr.me/assets/developers/populr_mixins.less';
 @import 'lesshat';
 @import 'grid';
 
 @import 'normalize.css';
 @import 'icons';
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&.css);
+@import url(//fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&.css);
 
 @columns: 12;
 @column-width: 40;
