added support for user-selected fonts

--- a/styles/main.less
+++ b/styles/main.less
@@ -109,6 +109,11 @@ h2 {
   line-height: @baseline;
 }
 
+.asset-title, #pop-title {
+  font-family: @headline-font-family;
+  font-weight: @headline-font-weight;
+}
+
 .asset-title {
   margin-bottom: @baseline / 2;
   padding-top: @baseline;
