--- a/styles/variables.less
+++ b/styles/variables.less
@@ -17,8 +17,8 @@
 // via dropdown menus in the pop editor.
 
 // @headline-font-family is changed with the Font dropdown 
-@headline-font-family: 'PT Sans', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-@headline-font-weight: bold;
+@headline-font-family: 'PTSansBold', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
+@headline-font-weight: normal;
 
 // @custom-color is changed with the color picker in the Style 
 // dropdown. The color picker will only be available to your 
