Add margin between webicons

--- a/styles/main.less
+++ b/styles/main.less
@@ -612,6 +612,8 @@ body {
 //   padding-top: @baseline / 2;
 // }
 
+.lt-ie8 .populr-webicon { margin-bottom: 5px; }
+
 #populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);
 
 
