--- a/styles/main.less
+++ b/styles/main.less
@@ -223,9 +223,9 @@ body {
 #pop-title {
   margin: @baseline * 2 0;
   font-size: @title-font-size;
-  color: @off-white;
   line-height: @baseline * 3;
   text-shadow: 2px 2px 2px rgba(0,0,0,0.61);
+  .text-color(@background-color);
 }
 
 #main-region {
@@ -607,10 +607,6 @@ body {
     padding-left: 5px;
   }
 }
-
-// .asset-type-embedgroup .description {
-//   padding-top: @baseline / 2;
-// }
 
 .lt-ie8 .populr-webicon { margin-bottom: 5px; }
 
