8px margin was causing a horizontal scrollbar to appear

--- a/styles/main.less
+++ b/styles/main.less
@@ -105,11 +105,12 @@
 
 /* BASIC */
 body {
+  color: @light-gray;
   font-family: 'PTSansRegular', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
   font-size: @normal-font-size;
-  line-height: @baseline;
   font-weight: normal;
-  color: @light-gray;
+  line-height: @baseline;
+  margin: 0;
 }
 
 p, h1, h2, h3 {
