--- a/styles/main.less
+++ b/styles/main.less
@@ -28,8 +28,8 @@
 @title-font-size: 55px + @font-size-bump;
 
 /* MIXINS */
-#populr > .link-button();
-#populr > .icon();
+#populr > .link-button(@custom-color);
+#populr > .icon(@custom-color);
 
 .text-shadow() {
   text-shadow: 1px 1px 1px rgba(0,0,0,0.61);
@@ -320,6 +320,10 @@ body {
   margin-left: -6px - unit(@gutter-width / 2, px);
   padding: @baseline * 2 6px + unit(@gutter-width, px);
   background-color: @custom-color;
+
+  #populr > .link-button(@alt-custom-color);
+  #populr > .icon(@alt-custom-color);
+
   .box-shadow(~'0 1px 2px rgba(0, 0, 0, 0.47)');
   text-align: center;
   .asset-container {
