Resolves issue 1895 by removing space between hero image and size 1 text assets

--- a/styles/main.less
+++ b/styles/main.less
@@ -622,6 +622,9 @@ body {
 
 #populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);
 
+.columnizer-row-contents-imagegroup:first-child~.columnizer-row-contents-text {
+  margin-top: -22px;
+}
 
 @media screen and (max-width: 905px) {
   .has-sharing #pop-links {
