--- a/styles/main.less
+++ b/styles/main.less
@@ -622,11 +622,7 @@ body {
 
 #populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);
 
-.columnizer-row-contents-imagegroup:first-child~.columnizer-row-contents-text { 
-  margin-top: -22px;
-  position: relative;
-  z-index: 10;
-}
+.columnizer-row-contents-imagegroup:first-child~.columnizer-row-contents-text { margin-top: 5px; }
 
 @media screen and (max-width: 905px) {
   .has-sharing #pop-links {
