--- a/styles/main.less
+++ b/styles/main.less
@@ -356,7 +356,8 @@ body {
     width: 740px;
     margin-left: unit(-@gutter-width / 2, px);
     .populr-image-slider {
-      z-index: 1;
+      z-index: 10;
+      
     }
     img {
       .border-radius(@border-radius @border-radius 0 0);
@@ -389,13 +390,47 @@ body {
   }
 }
 
-.asset-type-imagegroup .cover {
-  z-index: 2;
+//light-box fix by tanvir
+.populr-image-slider{
+    z-index:10;
+    .populr-image-slider{
+            .opacity(1);
+            .lt-ie9 & {
+                filter: alpha(opacity=100);
+            }
+     }
+}
+.my-lightbox-parent{
+    position: relative;
+    &:hover{
+        .populr-image-slider{
+            .opacity(0.65);
+            .lt-ie9 & {
+                filter: alpha(opacity=65);
+            }
+         }
+         .my-cover{
+            .opacity(1);
+            .lt-ie9 & {
+                filter: alpha(opacity=1);
+            }
+        }
+    }
+}
+
+
+.my-lightbox-parent .my-cover {
+  z-index: 5;
+  opacity:0;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  .opacity(0);
+    .lt-ie9 & {
+        filter: alpha(opacity=0);
+    }
   .bg {
     background: @custom-color;
     position: absolute;
@@ -418,6 +453,15 @@ body {
     color: @off-white;
     padding: 0 8px 2px 8px;
   }
+}
+
+
+.cover{
+    display: none!important;
+}
+
+.copy{
+    display:none!important;
 }
 
 .columnizer-row:first-child .asset-type-imagegroup.asset-size-1, .asset-type-text.asset-size-1 {
