Inline style causes a responsive issue, Which is solved here

--- a/styles/main.less
+++ b/styles/main.less
@@ -699,6 +699,10 @@ body {
   
   #populr > .mobile-reset();
   
+  .asset-type-imagegroup.asset-size-1 .my-lightbox-parent{
+    width:100%!important;
+  }
+  
   #pop-logo {
     margin: 0 auto;
   }
@@ -814,4 +818,9 @@ body {
       margin-bottom: @baseline / 2 !important;
     }
   }
+
+  .asset-type-imagegroup.asset-size-1 .my-lightbox-parent{
+    width:100%!important;
+  }
+
 }
