Inline-style removed

--- a/styles/main.less
+++ b/styles/main.less
@@ -391,6 +391,17 @@ body {
 }
 
 //light-box fix by tanvir
+.asset-type-imagegroup.asset-size-1 .wrap{
+    .my-lightbox-parent{
+        width:220px;
+    }
+}
+.asset-type-imagegroup.asset-size-1 .header-image{
+    .my-lightbox-parent{
+        width:740px;
+    }
+}
+
 .populr-image-slider{
     z-index:10;
     .populr-image-slider{
